Fix spacing issues on the real site

--- a/ppb-magnus-child/style.css
+++ b/ppb-magnus-child/style.css
@@ -13,20 +13,20 @@ body {
 	background: #EDE6E3;
 }
 
-#listing {
-	margin: 0% 10%;
+h1, h2, h3, h4, h5, h6 {
+    font-family: "proxima-nova", sans-serif;
+    font-weight: bold;
+    margin: .5em;
 }
 
 h1 {
-	text-align: center;
-	font-family: "proxima-nova", sans-serif;
-    font-weight: bold;
-	font-size: 3em;
-	margin: 0em;
+    text-align: center;
+    font-size: 2em;
+    margin-top: 0;
 }
 
 h2 {
-	font-size: 2em;
+    font-size: 1.5em;
 }
 
 h3, h4, h5, h6 {
@@ -34,9 +34,9 @@ h3, h4, h5, h6 {
 }
 
 .org {
-	display: flex;
-	align-items: center;
-	padding: 1em 0;
+    display: flex;
+    align-items: center;
+    padding-bottom: 1em;
 }
 
 .org-content > *,
@@ -59,7 +59,7 @@ h3, h4, h5, h6 {
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
-    margin: auto  .25em;
+    margin: .25em;
  }
 
 .org-skill-badge {
